--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -73,7 +73,7 @@
                                 <li><a href="{{path('product')}}">Product content</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li><a href="{{path('cart')}}">Cart</a></li>
-                                <li><a href="{{path('checkout')}}">Checkout</a></li>
+                                <li><a href="">Checkout</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li><a href="{{path('user_account')}}">Login</a></li>
                             </ul>
@@ -264,6 +264,7 @@
             </div>
             
         </footer><!--/Footer-->
+        
 		{% block javascripts %}{% endblock %}
         <script src="{{path('home')}}js/jquery.js"></script>
         <script src="{{path('home')}}js/bootstrap.min.js"></script>
